Fixing font shadow on mobile view and adding additional text to About Me section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,9 +287,17 @@ footer h6 {
         transition: all 500ms ease-in-out;
     }
 
+    article:last-child {
+        background-image: none;
+    }
+
     article:hover {
         background-image: linear-gradient(rgba(72,0,85,.5), rgba(72,0,85,.5));
         transition: all 500ms ease-in-out;
+    }
+    
+    article:last-child:hover {
+        background-image: none;
     }
 
     .content {
